# memorias

./: .gitignore  ABOUT.md  AGENTS.md  DEPLOYMENT.md  DEVELOPMENT.md  README.md  SECURITY.md
docker/: Dockerfile  install.st  run.st
kubernetes/: memorias-deployment.yaml  mongo-sts.yaml
memorias-copilot/: .env.compose.example  .gitignore  CLAUDE.md  Dockerfile  README.md  architecture-and-design.md  development-setup.md  docker-compose.yml  functionality.md  rules.md
memorias-copilot/backend/: .env.example  clean_logs.py  pyproject.toml  sync_db.py
memorias-copilot/backend/src/copilot/: __init__.py  config.py  llm.py  models.py  server.py  session.py
memorias-copilot/backend/src/copilot/db/: __init__.py  adapter.py
memorias-copilot/backend/src/copilot/prompts/: system_prompt.md
memorias-copilot/backend/src/copilot/tools/: __init__.py  definitions.py  dispatcher.py
memorias-copilot/backend/tests/: __init__.py  test_db.py  test_llm.py  test_server.py  test_session.py  test_tools.py
memorias-legacy/: README.md
memorias-mcp/: Dockerfile  package-lock.json  package.json  prisma.config.ts  tsconfig.json
memorias-mui-mockup/: about.html  admin.html  auth.html  copilot-plan.md  index.html  member-detail.html  member-form.html  members.html  migration-guide.md  preferences.html  project-detail.html  project-form.html  projects.html  publication-detail.html  publication-form.html  publications.html  reports.html  scholarship-detail.html  scholarship-form.html  scholarships.html  style.css  theses.html  thesis-detail.html  thesis-form.html
(+1018 files in other folders)
