[project]
name = "copilot"
version = "0.1.0"
description = "Memorias Copilot Backend"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn>=0.28.0",
    "pydantic>=2.6.0",
    "openai>=1.14.0",
    "typing-extensions>=4.10.0",
    "asyncpg>=0.31.0",
]

[tool.uv]
dev-dependencies = [
    "mypy>=1.9.0",
    "ruff>=0.3.0",
    "pytest>=8.1.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
]

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = ["B008"]

[tool.ruff.lint.per-file-ignores]
"src/copilot/tools/definitions.py" = ["E501"]
"tests/test_server.py" = ["E501"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
show_error_codes = true
show_column_numbers = true
pretty = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["src"]
testpaths = ["tests"]

[[tool.mypy.overrides]]
module = "asyncpg.*"
ignore_missing_imports = true
